Add template project, script for serial gc